--- a/SoundVision/Base.lproj/Main.storyboard
+++ b/SoundVision/Base.lproj/Main.storyboard
@@ -73,16 +73,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" text="About" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="253" y="28" width="95" height="42"/>
+                                <rect key="frame" x="253" y="20" width="95" height="42"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lj0-k8-JiF">
-                                <rect key="frame" x="180" y="123" width="240" height="267"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lj0-k8-JiF">
+                                <rect key="frame" x="180" y="136" width="240" height="267"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="4oS-m1-B9W"/>
+                                    <constraint firstAttribute="height" constant="267" id="kgK-8F-1eY"/>
+                                </constraints>
                                 <mutableString key="text">SoundVision allows blind and visually impaired individuals to see with sound.
 SoundVision works with the Structure depth sensor, and it needs to be connected to your device for the app to work.
 
@@ -94,16 +98,35 @@ The distance to an object is represented by the volume of the sound. When an obj
 Please note that the app does not work when the device is locked. It needs to be unlocked when using the app.</mutableString>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="4oS-m1-B9W"/>
+                                        <exclude reference="kgK-8F-1eY"/>
+                                    </mask>
+                                </variation>
                             </textView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Lj0-k8-JiF" firstAttribute="top" secondItem="zEq-FU-wV5" secondAttribute="bottom" constant="10" id="4Eh-dM-tbf"/>
+                            <constraint firstItem="zEq-FU-wV5" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="10" id="DIm-7c-LAZ"/>
+                            <constraint firstItem="Lj0-k8-JiF" firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="SoU-X5-n5W"/>
+                            <constraint firstItem="Djb-ko-YwX" firstAttribute="top" secondItem="Lj0-k8-JiF" secondAttribute="bottom" constant="30" id="V3X-1i-eLO"/>
                             <constraint firstAttribute="centerX" secondItem="Lj0-k8-JiF" secondAttribute="centerX" id="a8Z-NO-WmO"/>
-                            <constraint firstAttribute="centerY" secondItem="Lj0-k8-JiF" secondAttribute="centerY" id="c3s-1o-jie"/>
+                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="aHK-Oc-97f"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Lj0-k8-JiF" secondAttribute="trailing" constant="20" id="cbb-wA-FJc"/>
                             <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
                             <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
+                            <constraint firstItem="Lj0-k8-JiF" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leadingMargin" constant="20" id="v0f-ir-s8u"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="a8Z-NO-WmO"/>
+                                <exclude reference="qqM-NS-xev"/>
+                                <exclude reference="qzY-Ky-pLD"/>
+                            </mask>
+                        </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="About" image="about-icon" id="cPa-gy-q4n"/>
                 </viewController>
